--- a/static/less/medium.less
+++ b/static/less/medium.less
@@ -17,8 +17,8 @@
 		border: 0;
 
 		.title, .handle {
-			font-size: 22px;
-			padding: 4px 18px;
+			font-size: 15px;
+			padding: 0px 18px;
 		}
 	}
 
@@ -29,7 +29,7 @@
 	&.resizable {
 		.box-shadow(0px 6px 12px rgba(0, 0, 0, 0.5));
 
-		padding-top: 30px;
+		padding-top: 50px;
 		padding-left: 15px;
 		padding-right: 15px;
 	}
@@ -48,7 +48,7 @@
 	}
 
 	.write {
-		border: 1px solid #EDEDED;
+		border: 1px solid #B8AD93;
 	}
 
 	.tags-container {
