--- a/static/less/composer.less
+++ b/static/less/composer.less
@@ -32,10 +32,12 @@
 
 	.mobile-navbar {
 		position: static;
-		background: @btn-primary-bg;
-		color: @btn-primary-color;
+		//background: @btn-primary-bg;
+		color: #B8AD93;
 		min-height: 40px;
 		margin: 0;
+		justify-content: flex-end;
+		border-bottom: 0;
 
 		.btn-group {
 			flex-shrink: 0;
@@ -58,11 +60,70 @@
 			padding: 9px 5px;
 			margin: 0;
 		}
+
+		.composer-submit-wrap {
+			position: absolute;
+			top: 100%;
+			margin-top: -46px;
+			left: auto;
+			right: auto;
+
+			@media (min-width: @screen-sm-min) {
+				width: 720px;
+			}
+
+			@media (max-width: @screen-xs-max) {
+				left: 0;
+				right: 0;
+			}
+		}
+
+		.btn-send {
+			height: 46px;
+			width: 100%;
+		}
+
+		[data-action="discard"] {
+			@media (max-width: @screen-xs-max) {
+				padding-right: 0;
+			}
+		}
+	}
+
+	.mobile-navbar-head {
+		text-align: center;
+
+		@media (max-width: @screen-md-max) {
+			margin-bottom: 20px;
+		}
+
+		.category-name,
+		h4 {
+			font-family: "PostApoClear";
+			font-size: 24px;
+			line-height: 28px;
+			text-transform: uppercase;
+			color: #DCD0B4;
+		}
+
+		.category-name-container {
+			@media (max-width: @screen-md-max) {
+				width: 100%;
+			}
+
+			i,
+			.category-name {
+				vertical-align: middle;
+			}
+			i {
+				margin-right: 13px;
+			}
+		}
 	}
 
 	.title-container {
 		display: flex;
-		border-bottom: 1px solid #eee;
+		//border-bottom: 1px solid #eee;
 		margin: 0;
 
 		> div[data-component="composer/title"] {
@@ -73,6 +134,17 @@
 			flex: 0.33;
 		}
 
+		.category-list-container + [data-component="composer/title"] {
+			input {
+				@media (max-width: @screen-lg) {
+					width: 400px;
+				}
+				@media (max-width: @screen-md-max) {
+					width: 100%;
+				}
+			}
+		}
+
 		.title, .handle {
 			display: block;
 			margin: 0;
@@ -80,6 +152,13 @@
 			overflow: hidden;
 			width: 555px;
 			font-size: 15px;
+
+			@media (max-width: @screen-lg) {
+				width: 455px;
+			}
+			@media (max-width: @screen-md-max) {
+				width: 100%;
+			}
 		}
 
 		.category-list-container {
@@ -158,6 +237,11 @@
 			display: block;
 			list-style: none;
 
+			@media (max-width: @screen-sm-max) {
+				margin-right: -15px;
+				padding-bottom: 5px;
+			}
+
 			li {
 				display: inline-flex;
 				width: 38px;
@@ -191,6 +275,17 @@
 		flex: 2;
 		display: flex;
 		overflow: hidden;
+
+		@media (max-width: @screen-md-max) {
+			margin-top: 20px;
+			margin-bottom: 20px;
+		}
+
+		textarea {
+			@media (max-width: @screen-md-max) {
+				border: 1px solid #B8AD93;
+			}
+		}
 	}
 
 	.write-container, .preview-container {
@@ -335,13 +430,13 @@
 		padding: 0 5px;
 		max-height: ~"calc(100% - 86px)";
 
-		background: #fff;
+		background: #1D191B;
 		box-shadow: 0 2px 6px rgba(0,0,0,0.35);
 		overflow: auto;
 		-webkit-overflow-scrolling: touch;
 		transform: translate3d(0, 350px, 0);
 		transition: transform 0.3s, visibility 0s 0.3s;
-		z-index: 2;
+		z-index: 1030;
 
 		&.open {
 			transform: none;
@@ -351,11 +446,11 @@
 
 		li {
 			padding: 10px;
-			color: #333;
+			color: #8C826A;
 
 			&.active {
-				background-color: @btn-primary-bg;
-				color: @btn-primary-color;
+				background-color: #3A332D;
+				color: #B8AD93;
 			}
 		}
 	}
@@ -575,6 +670,7 @@
 		.composer {
 			height: 100%;
 			z-index: @zindex-popover + 10;
+			padding-bottom: 60px;
 
 			.draft-icon {
 				position: absolute;
