--- a/static/less/composer.less
+++ b/static/less/composer.less
@@ -252,11 +252,20 @@
 				color: #B8AD93;
 				background: #3A332D;
 				font-size: 20px;
+				line-height: 1;
+				vertical-align: middle;
 
 				&:focus, &:hover {
 					outline: none;
 					background-color: #8C826A;
 					color: #1D191B;
+				}
+
+				.fa-stack {
+					color: inherit;
+					width: 38px;
+					height: 38px;
+					line-height: 37px;
 				}
 
 				& + li {
