--- a/static/less/composer.less
+++ b/static/less/composer.less
@@ -593,12 +593,11 @@
 	}
 
 	.topic-thumb-container {
-		margin-top: 5px;
-		margin-left: 8px;
-		margin-right: 8px;
-		background: rgb(255, 255, 255);
-		background: rgba(255, 255, 255, 0.6);
-		padding: 10px;
+		margin-top: 20px;
+		margin-left: 0;
+		margin-right: 0;
+		background: rgba(58,51,45,0.3);
+		padding: 20px;
 	}
 
 	.topic-thumb-btn {
